v01.cydsn/BUILD.log
--------------- Build Started: 01/27/2018 17:41:02 Project: v01, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
The code generation step is up to date.
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I..\RNET -I..\FreeRTOS\include -I..\FreeRTOS\portable\GCC\ARM_CM0 -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/Radio.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c ..\RNET\Radio.c -o .\CortexM0\ARM_GCC_541\Debug\Radio.o
..\RNET\Radio.c: In function 'CheckRx':
..\RNET\Radio.c:277:23: error: 'RF1_STATUS_RX_DR' undeclared (first use in this function)
     hasRx = (status & RF1_STATUS_RX_DR) != 0;
                       ^
..\RNET\Radio.c:277:23: note: each undeclared identifier is reported only once for each function it appears in
..\RNET\Radio.c:282:15: warning: implicit declaration of function 'RF1_GetFifoStatus' [-Wimplicit-function-declaration]
         (void)RF1_GetFifoStatus(&status);
               ^
..\RNET\Radio.c:284:24: error: 'RF1_FIFO_STATUS_RX_EMPTY' undeclared (first use in this function)
         if (!(status & RF1_FIFO_STATUS_RX_EMPTY) ||
                        ^
..\RNET\Radio.c:285:23: error: 'RF1_FIFO_STATUS_RX_FULL' undeclared (first use in this function)
             (status & RF1_FIFO_STATUS_RX_FULL)) { /* Rx not empty? */
                       ^
..\RNET\Radio.c: In function 'RADIO_HandleStateMachine':
..\RNET\Radio.c:382:32: error: 'RF1_FIFO_STATUS_RX_EMPTY' undeclared (first use in this function)
                 if (!(status & RF1_FIFO_STATUS_RX_EMPTY) || // RF1_FIFO_STATUS_RX_EMPTY  (1<<0)
                                ^
..\RNET\Radio.c:383:31: error: 'RF1_FIFO_STATUS_RX_FULL' undeclared (first use in this function)
                     (status & RF1_FIFO_STATUS_RX_FULL)) {
                               ^
..\RNET\Radio.c:472:30: error: 'RF1_STATUS_MAX_RT' undeclared (first use in this function)
                 if (status & RF1_STATUS_MAX_RT) { // RF1_STATUS_MAX_RT = 0x10
                              ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 01/27/2018 17:41:05 ---------------
